--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1"
     />
+    <meta name="color-scheme" content="dark light">
     <title>
       Vervoerregio Amsterdam - Toolgankelijkheid
     </title>
@@ -41,6 +42,8 @@
           <h1 class="toolgankelijk">
             <small>Maak kennis met</small> Toolgankelijk
           </h1>
+          <br>
+          <p>Toolgankelijk is een overzichtssite voor de partners van Vervoerregio Amsterdam om de toegankelijkheid van de website te optimaliseren om aan de WCAG richtlijnen en wetgeving met ingang van 2025 te voldoen.</p>
         </div>
 
         <nav class="options">
