--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -121,7 +121,6 @@
             <button
               class="contrast-trigger"
               id="changeContrast"
-              aria-label="Vergroot kleur contrast"
             >
               <svg
                 width="36"
@@ -137,6 +136,11 @@
                   fill=""
                 />
               </svg>
+            </button>
+          </li>
+          <li>
+            <button class="btn-colorscheme" id="">
+              ja
             </button>
           </li>
         </ul>
