--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/tablet.css" />
     <link rel="stylesheet" href="styles/desktop.css" />
+    <link rel="stylesheet" href="styles/desktop-xl.css" />
     <link
       rel="stylesheet"
       href="../styles/desktop-xl.css"
@@ -102,5 +103,14 @@
         </nav>
       </div>
     </main>
+    <footer>
+      <div>
+
+      </div>
+    </footer>
   </body>
+  <script
+  src="https://kit.fontawesome.com/45c29531a0.js"
+  crossorigin="anonymous"
+></script>
 </html>
