--- a/ontwikkelaar.html
+++ b/ontwikkelaar.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/tablet.css" />
     <link rel="stylesheet" href="styles/desktop.css" />
+    <link rel="stylesheet" href="styles/desktop-xl.css" />
     <link
       rel="stylesheet"
       href="../styles/desktop-xl.css"
@@ -47,7 +48,7 @@
         <ul class="ui-settings">
           <li>
             <a
-              href="https://stefan-espant.github.io/all-human-accessible-website/"
+              href="/"
               aria-label="Ga terug naar de homepagina"
             >
               <i class="fa-solid fa-house"></i>
@@ -125,7 +126,12 @@
       </section>
     </main>
     <footer>
-      <div class="emotion-group" aria-label="">
+      <div>
+      <div
+        class="emotion-group"
+        aria-label=""
+        
+      >
         <h2 aria-label="Heeft deze pagina geholpen?">
           Heeft deze pagina geholpen?
         </h2>
@@ -166,19 +172,25 @@
       </div>
       <nav>
         <div class="footer-links">
-          <a href="mailto:info@vervoeregio.nl?subject=Feedback over Toolgankelijk"
-            aria-label="Stuur een e-mail naar Vervoeregio Amsterdam."
-            ><i class="fa-solid fa-envelope"></i> Contact
-            ons</a
-          >
-          <a
-            href="ontwikkelaar.html"
-            aria-label="Lees meer info over de ontwikkelaar%20van%20Toolgankeljk."
-            ><i class="fa-solid fa-address-card"></i> Over de ontwikkelaar</a
-          >
-        </div>
+        <a href="mailto:info@vervoeregio.nl?subject=Feedback%20over%20Toolgankelijk"
+          aria-label="Stuur een e-mail naar Vervoeregio Amsterdam."
+          ><i class="fa-solid fa-envelope"></i>  Contact ons</a
+        >
+        <a
+        href="ontwikkelaar.html"
+        aria-label="Lees meer info over de ontwikkelaar van Toolgankeljk."
+        ><i class="fa-solid fa-address-card"></i> Over de ontwikkelaar</a
+      >
+      <a
+      href="https://styleguide-vervoerregioamsterdam.student.fdnd.nl/"
+      aria-label="Ga naar de website van de dynamische stijlgids."
+      ><i class="fa-solid fa-swatchbook"></i> Dynamische stijlgids</a
+    >
+    </div>
         <div class="social-media-group">
-          <h3 class="c-magenta">Deel deze tool op:</h3>
+          <h3 class="c-magenta">
+            Deel deze tool op:
+          </h3>
           <div>
             <a
               target="_blank"
@@ -190,14 +202,15 @@
               ></i
             ></a>
             <a
-              class="twitter-share-button"
-              href="https://twitter.com/intent/tweet?text=Hello%20world"
+            class="twitter-share-button"
+            href="https://twitter.com/intent/tweet?text=Hello%20world"
               aria-label="Deel deze website op Twitter."
               ><i class="icon fa-brands fa-twitter"></i
             ></a>
           </div>
         </div>
       </nav>
+    </div>
     </footer>
     <script
       src="./scripts/script.js"
