--- a/robuust.html
+++ b/robuust.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/tablet.css" />
     <link rel="stylesheet" href="styles/desktop.css" />
+    <link rel="stylesheet" href="styles/desktop-xl.css" />
     <link
       rel="icon"
       type="image/png"
@@ -90,7 +91,7 @@
         <ul class="ui-settings">
           <li>
             <a
-              href="https://stefan-espant.github.io/all-human-accessible-website/" aria-label="Ga terug naar de homepagina"
+              href="/" aria-label="Ga terug naar de homepagina"
             >
             <i class="fa-solid fa-house"></i>
             </a>
@@ -486,6 +487,7 @@
       </section>
     </main>
     <footer>
+      <div>
       <div
         class="emotion-group"
         aria-label=""
@@ -540,6 +542,11 @@
         aria-label="Lees meer info over de ontwikkelaar van Toolgankeljk."
         ><i class="fa-solid fa-address-card"></i> Over de ontwikkelaar</a
       >
+      <a
+      href="https://styleguide-vervoerregioamsterdam.student.fdnd.nl/"
+      aria-label="Ga naar de website van de dynamische stijlgids."
+      ><i class="fa-solid fa-swatchbook"></i> Dynamische stijlgids</a
+    >
     </div>
         <div class="social-media-group">
           <h3 class="c-magenta">
@@ -564,6 +571,7 @@
           </div>
         </div>
       </nav>
+    </div>
     </footer>
     <script
       src="./scripts/script.js"
