--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/mobile.css" />
     <link rel="stylesheet" href="styles/tablet.css" />
     <link rel="stylesheet" href="styles/desktop.css" />
+    <link rel="stylesheet" href="styles/desktop-xl.css" />
     <link
       rel="icon"
       type="image/png"
@@ -91,7 +92,7 @@
         <ul class="ui-settings">
           <li>
             <a
-              href="https://stefan-espant.github.io/all-human-accessible-website/" aria-label="Ga terug naar de homepagina"
+              href="/" aria-label="Ga terug naar de homepagina"
             >
             <i class="fa-solid fa-house"></i>
             </a>
@@ -139,8 +140,11 @@
             </button>
           </li>
           <li>
-            <button class="btn-colorscheme" id="">
-              ja
+            <button class="btn-colorscheme">
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M19 0L22.4641 6H15.5359L19 0ZM28 19C28 23.9706 23.9706 28 19 28C14.0294 28 10 23.9706 10 19C10 14.0294 14.0294 10 19 10C23.9706 10 28 14.0294 28 19ZM31 22.4641L37 19L31 15.5359V22.4641ZM19 37L15.5359 31H22.4641L19 37ZM6 15.5359L0 19L6 22.4641V15.5359ZM6.43506 5.72792L13.1272 7.52107L8.22815 12.4201L6.43506 5.72792ZM30.8048 13.1272L32.598 6.43503L25.9059 8.22818L30.8048 13.1272ZM32.598 31.8909L25.9059 30.0977L30.8048 25.1987L32.598 31.8909ZM8.22815 25.9058L6.43506 32.598L13.1272 30.8048L8.22815 25.9058Z" fill=""/>
+                </svg>
+                
             </button>
           </li>
         </ul>
@@ -480,6 +484,7 @@
       </section>
     </main>
     <footer>
+      <div>
       <div
         class="emotion-group"
         aria-label=""
@@ -534,6 +539,11 @@
         aria-label="Lees meer info over de ontwikkelaar van Toolgankeljk."
         ><i class="fa-solid fa-address-card"></i> Over de ontwikkelaar</a
       >
+      <a
+      href="https://styleguide-vervoerregioamsterdam.student.fdnd.nl/"
+      aria-label="Ga naar de website van de dynamische stijlgids."
+      ><i class="fa-solid fa-swatchbook"></i> Dynamische stijlgids</a
+    >
     </div>
         <div class="social-media-group">
           <h3 class="c-magenta">
@@ -558,6 +568,7 @@
           </div>
         </div>
       </nav>
+    </div>
     </footer>
     <script
       src="./scripts/script.js"
