--- a/robuust.html
+++ b/robuust.html
@@ -93,7 +93,9 @@
             <a
               href="/" aria-label="Ga terug naar de homepagina"
             >
-            <i class="fa-solid fa-house"></i>
+            <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M33.1638 15.2685C33.8233 15.8892 33.384 16.9967 32.4784 16.9967H31.016C30.4616 16.9967 30.013 17.4477 30.016 18.0021L30.0856 31.0502C30.0885 31.6046 29.64 32.0555 29.0856 32.0555H22C21.4477 32.0555 21 31.6078 21 31.0555V22.389C21 21.8367 20.5523 21.389 20 21.389H14C13.4477 21.389 13 21.8367 13 22.389V31.0555C13 31.6078 12.5523 32.0555 12 32.0555H4.90911C4.35683 32.0555 3.90911 31.6078 3.90911 31.0555V17.9967C3.90911 17.4444 3.4614 16.9967 2.90911 16.9967H1.5216C0.616019 16.9967 0.176793 15.8892 0.836242 15.2685L16.3147 0.700632C16.6997 0.338233 17.3003 0.338233 17.6854 0.700632L33.1638 15.2685Z" fill="#B9005F"/>
+              </svg>  
             </a>
           </li>
           <li>
@@ -576,10 +578,6 @@
     <script
       src="./scripts/script.js"
       type="text/javascript"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/45c29531a0.js"
-      crossorigin="anonymous"
     ></script>
     <div id="fb-root"></div>
     <script
