--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
 
   <body>
     <header>
-      <img
+      <div
         id="logo"
-        src="assets/logo.png"
-        alt="logo Vervoerregio Amsterdam"
-      />
-    <div id="after-curve"></div>
-  </header>
+      ></header>
+      <div id="after-curve"></div>
+    </header>
 
     <!-- Dit is de sectie waar de content staat -->
     <main class="index">
