--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -50,6 +50,17 @@
       </svg>
       <p>Robuust</p>
     </a>
+     
+    <div>
+      <label for="site-search">Zoek op de site:</label>
+      <input type="search" id="site-search">
+      <button class="subcat-btn">
+        <svg width="15" height="15" viewBox="0 0 15 15" fill="" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M10 6C10 8.20914 8.20914 10 6 10C3.79086 10 2 8.20914 2 6C2 3.79086 3.79086 2 6 2C8.20914 2 10 3.79086 10 6ZM9.47655 10.8907C8.49573 11.5892 7.29584 12 6 12C2.68629 12 0 9.31371 0 6C0 2.68629 2.68629 0 6 0C9.31371 0 12 2.68629 12 6C12 7.29582 11.5892 8.4957 10.8908 9.47652L14.3501 12.9359C14.7406 13.3264 14.7406 13.9595 14.3501 14.3501C13.9596 14.7406 13.3264 14.7406 12.9359 14.3501L9.47655 10.8907Z" fill=""/>
+        </svg>          
+         Zoeken
+      </button>
+    </div>
   </aside>
 
   <!-- Dit is de sectie waar de content staat -->
